apps/arr-stack/sonarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    servarr.app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      servarr.app: sonarr
  template:
    metadata:
      labels:
        servarr.app: sonarr
    spec:
      # securityContext:
      #   runAsUser: 911
      #   runAsGroup: 911
      #   fsGroup: 911
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: data
              mountPath: /config
            - name: tv
              mountPath: /tv
            # - name: import
            #   mountPath: /import
            - name: qflood-downloads
              mountPath: "/qflood-downloads"
            - name: sabnzbd-downloads
              mountPath: "/sabnzbd-downloads"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sonarr-data
        - name: tv
          persistentVolumeClaim:
            claimName: jellyfin-tv-pvc
        # - name: import
        #   persistentVolumeClaim:
        #     claimName: radarr-import-movies
        - name: qflood-downloads
          persistentVolumeClaim:
            claimName: qflood-downloads
        - name: sabnzbd-downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads
