apps/arr-stack/sonarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    servarr.app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
  type: ClusterIP
